X-Ray + Subdivision surface Face select problem #66630

Closed
opened 2019-07-09 23:36:21 +02:00 by Andrey Rusnak · 9 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 580/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-09 12:03, hash: db45aaafab
Worked: (optional)

Short description of error
I cannot select faces when X-ray mode is on, if the Subsurface modifier is enabled on the object (with the number of subdivisions in viewport > 0).

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 580/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-09 12:03, hash: `db45aaafab` Worked: (optional) **Short description of error** I cannot select faces when X-ray mode is on, if the Subsurface modifier is enabled on the object (with the number of subdivisions in viewport > 0). **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @AndreyRusnak

Added subscriber: @AndreyRusnak

#66632 was marked as duplicate of this issue

#66632 was marked as duplicate of this issue
Jeroen Bakker self-assigned this 2019-07-10 08:44:38 +02:00
Member

I am able to reproduce it. I raised it as high prio as this is core functionality.

#66630.blend

I am able to reproduce it. I raised it as high prio as this is core functionality. [#66630.blend](https://archive.blender.org/developer/F7580799/T66630.blend)
Member

Commit that broke this is {226c6f086aa255bb71e554c860545bb435c06756}

The selection seems to be a state error.

when in mesh_foreachScreenFace the flag ME_VERT_FACEDOT is not set so it will never check the facedots.

Commit that broke this is {226c6f086aa255bb71e554c860545bb435c06756} The selection seems to be a state error. when in `mesh_foreachScreenFace` the flag `ME_VERT_FACEDOT` is not set so it will never check the facedots.

Added subscribers: @fclem, @brecht

Added subscribers: @fclem, @brecht

CC @fclem.

CC @fclem.
Member

Added subscribers: @jamesponge, @lichtwerk, @CraigD

Added subscribers: @jamesponge, @lichtwerk, @CraigD

This issue was referenced by 6f1190cbf0

This issue was referenced by 6f1190cbf0ea9e1134e9594f135c0c6e99bdcfc3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66630
No description provided.