Fix T66630 X-Ray + Subdivision surface Face select problem